--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Abraham William <abrahamwilliamsj@gmail.com>
 839 <8398a7@gmail.com>
 Aaron Ackerman <theron17@gmail.com>
 Aaron Cannon <cannona@fireantproductions.com>
